--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Untitled",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +55,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2.Integers"
+        "## 2.Integers: Data Types"
       ]
     },
     {
@@ -62,17 +63,17 @@
       "metadata": {
         "id": "T-Rpz5U-XzYl",
         "colab_type": "code",
+        "outputId": "0cce2775-04c8-4e4a-e8c4-fd30e3f5e700",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "0cce2775-04c8-4e4a-e8c4-fd30e3f5e700"
+        }
       },
       "source": [
         "!pip install ipython-autotime\n",
         "%load_ext autotime"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,16 +158,16 @@
       "metadata": {
         "id": "GjruM9JmckEs",
         "colab_type": "code",
+        "outputId": "5582b600-27e6-4093-9f40-1f5b0706940c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "5582b600-27e6-4093-9f40-1f5b0706940c"
+        }
       },
       "source": [
         "print(type(100))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,18 +194,18 @@
       "metadata": {
         "id": "Mb5dUF_Zj0za",
         "colab_type": "code",
+        "outputId": "46f49c66-fd47-4ee7-e431-a439f8c84de4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e4a10f0b-138f-444f-a925-cd019f4c26e0"
+        }
       },
       "source": [
         "import sys\n",
         "\n",
         "sys.getsizeof(0)"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,14 +217,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "time: 12.2 ms\n"
-          ],
-          "name": "stdout"
+          "execution_count": 1
         }
       ]
     },
@@ -232,17 +226,17 @@
       "metadata": {
         "id": "N2rZOnO_kBKA",
         "colab_type": "code",
+        "outputId": "62680622-c0af-465b-f53f-fa781b2c4e8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "62680622-c0af-465b-f53f-fa781b2c4e8c"
+        }
       },
       "source": [
         "sys.getsizeof(2**1000\n",
         "            )"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,18 +264,18 @@
       "metadata": {
         "id": "EPRyJa9dlS2A",
         "colab_type": "code",
+        "outputId": "6de56118-8f63-4d0b-c283-fcfd6d1bc66b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6de56118-8f63-4d0b-c283-fcfd6d1bc66b"
+        }
       },
       "source": [
         "(160 \n",
         " - 24 # number of overhead, bytes\n",
         " ) * 8"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,16 +303,16 @@
       "metadata": {
         "id": "WYMno_Z_l0bY",
         "colab_type": "code",
+        "outputId": "68e41fed-08a2-4c41-80e2-bcb021a924a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "68e41fed-08a2-4c41-80e2-bcb021a924a1"
+        }
       },
       "source": [
         "2**1000"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,11 +350,11 @@
       "metadata": {
         "id": "1v5kKUmPl85y",
         "colab_type": "code",
+        "outputId": "ef1deaad-99ee-4f62-9d8b-c3d6419d1756",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ef1deaad-99ee-4f62-9d8b-c3d6419d1756"
+        }
       },
       "source": [
         "import time\n",
@@ -370,7 +364,7 @@
         "        a * 2\n",
         "# We start with a small integer value for a (10):"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,11 +380,11 @@
       "metadata": {
         "id": "VYMloRyymQG9",
         "colab_type": "code",
+        "outputId": "cce4883b-4d38-4082-932f-693bd31ebf9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "cce4883b-4d38-4082-932f-693bd31ebf9c"
+        }
       },
       "source": [
         "start = time.perf_counter()\n",
@@ -398,7 +392,7 @@
         "end = time.perf_counter()\n",
         "print(end - start)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,11 +409,11 @@
       "metadata": {
         "id": "lmc98c0Gmq7S",
         "colab_type": "code",
+        "outputId": "2b074c23-4a66-48e7-90c1-78445faf82bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "2b074c23-4a66-48e7-90c1-78445faf82bb"
+        }
       },
       "source": [
         "start = time.perf_counter()\n",
@@ -427,7 +421,7 @@
         "end = time.perf_counter()\n",
         "print(end - start)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,11 +438,11 @@
       "metadata": {
         "id": "JWUJWY-3mthK",
         "colab_type": "code",
+        "outputId": "d50263a3-5bba-4823-93ac-83f54c836f07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "d50263a3-5bba-4823-93ac-83f54c836f07"
+        }
       },
       "source": [
         "start = time.perf_counter()\n",
@@ -456,7 +450,7 @@
         "end = time.perf_counter()\n",
         "print(end - start)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,9 +463,509 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LVs6rOJdlE47",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3.Integers: Operations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hvb3ch9NlQnt",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1Sxws5N8OoR0OjGVp13WSP8Kz5TBj-htK)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wgU9nBMImGvf",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1sW-4cBV3zl3da16mQ2FIBz-lptFH1130)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aFSQSRXZnQAM",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=15PoAU8sEnaqZALbBg0esrypvUPx1K6SJ)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oTgbLWj4n1N6",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1Go-u-Kdd9WSTsXiYQplzgbfKvHkaOmfb)\n",
+        "![alt text](https://drive.google.com/uc?id=1cshyv_Z4asG7FpNJOL-wHH0KVUiWyQAq)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fGvvEUz6puWz",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1rBbU56g585A7UJDQJjMkcxrqZxC9rGL6)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HYeK9j6hmv8-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3a4425e0-8cb7-4eff-803f-90914deb9893"
+      },
+      "source": [
+        "# standard division operator `/` **always** results in a float value.\n",
+        "\n",
+        "type(10 / 2)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BW030bBjsQDS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ad2f8623-0bbe-4585-e56b-fd4d3499ad9c"
+      },
+      "source": [
+        "import math\n",
+        "\n",
+        "math.floor(3.14)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "15oDpV9osdNp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0049d390-336a-4f1f-9b74-dd592a732395"
+      },
+      "source": [
+        "math.floor(-3.60)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WM6gh_2vskDV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "98d4458b-6de3-4ec6-de1f-a217604be3cc"
+      },
+      "source": [
+        "math.floor(-3.0005)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7CPpmYbGsqOs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4e9fc8b0-da78-4461-fecd-d8fc222ba9f8"
+      },
+      "source": [
+        "math.floor(-3.0000000000000001)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CHz6gGSbtAum",
+        "colab_type": "text"
+      },
+      "source": [
+        "Wait what is ging on!?\n",
+        "</br>\n",
+        "It is because of limited precision for float in Python"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "24TOFjiptW6s",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 3.1. The Floor Division Operator"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dsble-I-s2KE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "0bb68f6c-5a0a-4c54-bd53-a5f0cf13082c"
+      },
+      "source": [
+        "a = 33\n",
+        "b = 16\n",
+        "print(a/b)\n",
+        "print(a//b)\n",
+        "print(math.floor(a/b))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.0625\n",
+            "2\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZUi-Ugentclp",
+        "colab_type": "text"
+      },
+      "source": [
+        "For positive numbers, `a//b` is basically the same as truncating (taking the integer portion) of `a / b`.\n",
+        "</br>\n",
+        "But this is **not** the case for negative numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EaPA3P0ytY-O",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "3e02ed0f-2ca5-4d22-cd8e-fd2fc931ece6"
+      },
+      "source": [
+        "a = -33\n",
+        "b = 16\n",
+        "print('{0}/{1} = {2}'.format(a, b, a/b))\n",
+        "print('trunc({0}/{1}) = {2}'.format(a, b, math.trunc(a/b)))\n",
+        "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
+        "print('floor({0}//{1}) = {2}'.format(a, b, math.floor(a/b)))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-33/16 = -2.0625\n",
+            "trunc(-33/16) = -2\n",
+            "-33//16 = -3\n",
+            "floor(-33//16) = -3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m63Gn3lZtkL4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "c1a89d77-2e2a-4a88-d5f5-2ff892dc1acd"
+      },
+      "source": [
+        "a = 33\n",
+        "b = -16\n",
+        "print('{0}/{1} = {2}'.format(a, b, a/b))\n",
+        "print('trunc({0}/{1}) = {2}'.format(a, b, math.trunc(a/b)))\n",
+        "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
+        "print('floor({0}//{1}) = {2}'.format(a, b, math.floor(a/b)))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "33/-16 = -2.0625\n",
+            "trunc(33/-16) = -2\n",
+            "33//-16 = -3\n",
+            "floor(33//-16) = -3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kdY2p3P6uESe",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 3.2. The Modulo Operator"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OdOvcMbvuGr4",
+        "colab_type": "text"
+      },
+      "source": [
+        "The modulo operator and the floor division operator will always satisfy the following equation:\n",
+        "\n",
+        "``a = b * (a // b) + a % b``"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wL8Panwot9uj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "13009eab-774f-4967-c0b6-2da0f2795a08"
+      },
+      "source": [
+        "a = 13\n",
+        "b = 4\n",
+        "print('{0}/{1} = {2}'.format(a, b, a/b))\n",
+        "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
+        "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
+        "print(a == b * (a//b) + a%b)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "13/4 = 3.25\n",
+            "13//4 = 3\n",
+            "13%4 = 1\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1tt-_zkmuIcJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "40d7b127-ac04-4fec-da0a-38e23da75c27"
+      },
+      "source": [
+        "a = -13\n",
+        "b = 4\n",
+        "print('{0}/{1} = {2}'.format(a, b, a/b))\n",
+        "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
+        "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
+        "print(a == b * (a//b) + a%b)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-13/4 = -3.25\n",
+            "-13//4 = -4\n",
+            "-13%4 = 3\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SlP0ap-TuPg8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "b1758f04-a761-46dd-c6ec-c559e4998005"
+      },
+      "source": [
+        "a = 13\n",
+        "b = -4\n",
+        "print('{0}/{1} = {2}'.format(a, b, a/b))\n",
+        "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
+        "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
+        "print(a == b * (a//b) + a%b)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "13/-4 = -3.25\n",
+            "13//-4 = -4\n",
+            "13%-4 = -3\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U-8zGHaruQ_y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "a37eeabf-3740-4606-d158-4fd1991ced9c"
+      },
+      "source": [
+        "a = -13\n",
+        "b = -4\n",
+        "print('{0}/{1} = {2}'.format(a, b, a/b))\n",
+        "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
+        "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
+        "print(a == b * (a//b) + a%b)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-13/-4 = 3.25\n",
+            "-13//-4 = 3\n",
+            "-13%-4 = -1\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sJmprdTUuSTt",
         "colab_type": "code",
         "colab": {}
       },
