--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -205,7 +205,7 @@
         "\n",
         "sys.getsizeof(0)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,18 +528,18 @@
       "metadata": {
         "id": "HYeK9j6hmv8-",
         "colab_type": "code",
+        "outputId": "3a4425e0-8cb7-4eff-803f-90914deb9893",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3a4425e0-8cb7-4eff-803f-90914deb9893"
+        }
       },
       "source": [
         "# standard division operator `/` **always** results in a float value.\n",
         "\n",
         "type(10 / 2)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,18 +560,18 @@
       "metadata": {
         "id": "BW030bBjsQDS",
         "colab_type": "code",
+        "outputId": "ad2f8623-0bbe-4585-e56b-fd4d3499ad9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ad2f8623-0bbe-4585-e56b-fd4d3499ad9c"
+        }
       },
       "source": [
         "import math\n",
         "\n",
         "math.floor(3.14)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,16 +592,16 @@
       "metadata": {
         "id": "15oDpV9osdNp",
         "colab_type": "code",
+        "outputId": "0049d390-336a-4f1f-9b74-dd592a732395",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0049d390-336a-4f1f-9b74-dd592a732395"
+        }
       },
       "source": [
         "math.floor(-3.60)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,16 +622,16 @@
       "metadata": {
         "id": "WM6gh_2vskDV",
         "colab_type": "code",
+        "outputId": "98d4458b-6de3-4ec6-de1f-a217604be3cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "98d4458b-6de3-4ec6-de1f-a217604be3cc"
+        }
       },
       "source": [
         "math.floor(-3.0005)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,16 +652,16 @@
       "metadata": {
         "id": "7CPpmYbGsqOs",
         "colab_type": "code",
+        "outputId": "4e9fc8b0-da78-4461-fecd-d8fc222ba9f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4e9fc8b0-da78-4461-fecd-d8fc222ba9f8"
+        }
       },
       "source": [
         "math.floor(-3.0000000000000001)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,11 +704,11 @@
       "metadata": {
         "id": "dsble-I-s2KE",
         "colab_type": "code",
+        "outputId": "0bb68f6c-5a0a-4c54-bd53-a5f0cf13082c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "0bb68f6c-5a0a-4c54-bd53-a5f0cf13082c"
+        }
       },
       "source": [
         "a = 33\n",
@@ -717,7 +717,7 @@
         "print(a//b)\n",
         "print(math.floor(a/b))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,11 +747,11 @@
       "metadata": {
         "id": "EaPA3P0ytY-O",
         "colab_type": "code",
+        "outputId": "3e02ed0f-2ca5-4d22-cd8e-fd2fc931ece6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "3e02ed0f-2ca5-4d22-cd8e-fd2fc931ece6"
+        }
       },
       "source": [
         "a = -33\n",
@@ -761,7 +761,7 @@
         "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
         "print('floor({0}//{1}) = {2}'.format(a, b, math.floor(a/b)))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,11 +780,11 @@
       "metadata": {
         "id": "m63Gn3lZtkL4",
         "colab_type": "code",
+        "outputId": "c1a89d77-2e2a-4a88-d5f5-2ff892dc1acd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "c1a89d77-2e2a-4a88-d5f5-2ff892dc1acd"
+        }
       },
       "source": [
         "a = 33\n",
@@ -794,7 +794,7 @@
         "print('{0}//{1} = {2}'.format(a, b, a//b))\n",
         "print('floor({0}//{1}) = {2}'.format(a, b, math.floor(a/b)))"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,11 +835,11 @@
       "metadata": {
         "id": "wL8Panwot9uj",
         "colab_type": "code",
+        "outputId": "13009eab-774f-4967-c0b6-2da0f2795a08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "13009eab-774f-4967-c0b6-2da0f2795a08"
+        }
       },
       "source": [
         "a = 13\n",
@@ -849,7 +849,7 @@
         "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
         "print(a == b * (a//b) + a%b)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,11 +868,11 @@
       "metadata": {
         "id": "1tt-_zkmuIcJ",
         "colab_type": "code",
+        "outputId": "40d7b127-ac04-4fec-da0a-38e23da75c27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "40d7b127-ac04-4fec-da0a-38e23da75c27"
+        }
       },
       "source": [
         "a = -13\n",
@@ -882,7 +882,7 @@
         "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
         "print(a == b * (a//b) + a%b)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,11 +901,11 @@
       "metadata": {
         "id": "SlP0ap-TuPg8",
         "colab_type": "code",
+        "outputId": "b1758f04-a761-46dd-c6ec-c559e4998005",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "b1758f04-a761-46dd-c6ec-c559e4998005"
+        }
       },
       "source": [
         "a = 13\n",
@@ -915,7 +915,7 @@
         "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
         "print(a == b * (a//b) + a%b)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,11 +934,11 @@
       "metadata": {
         "id": "U-8zGHaruQ_y",
         "colab_type": "code",
+        "outputId": "a37eeabf-3740-4606-d158-4fd1991ced9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "a37eeabf-3740-4606-d158-4fd1991ced9c"
+        }
       },
       "source": [
         "a = -13\n",
@@ -948,7 +948,7 @@
         "print('{0}%{1} = {2}'.format(a, b, a%b))\n",
         "print(a == b * (a//b) + a%b)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -960,6 +960,96 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NTM9GyV4lndW",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4.INTEGERS: Constructor and Bases (Part 1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W4Z6Moqunj94",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1ACGOeXMVdvHnCqlvZQgYDbWEY3qQp1vC)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AQHZR2hSnkiC",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1A6VDdgyDk-bHmYiwRNFqq7caeqrLzYbr)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WzQBK5mkptbD",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1TaXefPpnz_U3TqcJ0FcyenVu25jSIKGH)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lAOui_VzrQFy",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1MdkyubAKViBIuU9KfBrKZvGOq744kQAM)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M6pFFf6frdwo",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1an_d9qDgVQwsz-RZaHR2UnER9u2buTxV)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z4QYHC1NryZm",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1XrhnusfQq0GWTT6jmqu21NZVDaH-8oST)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jMUis3PwsN-R",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=19NeBUnctfHItoPm9WEJRiXhBPT1uHLMz)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IcxjIJlfsNhF",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1aDEbdAo_zbU7HHzsQ9d8BpYSvx38ptGj)"
       ]
     },
     {
